v0.0.5
- Replace innerHTML by textContent
- Fix GreaseMonkey update URL
- Massive refactoring
- Optimise hash change event by using native browser events
- Automatically clean external tools API key cache when needed
- Disable external tools API key fetching when not available

v0.0.4
- Change local storage prefix to conform with AMO
- Use jsonToDOM (more cleaner way to inject config panel / tools bar)
- Rearrange the configuration panel
- Use API keys to sync with external tools (-> fix OEEV sync)
- Fix hero bar stat while not in town

v0.0.3
- Add Safari wrapper extension
- Fix Twinoid bar bug when hidden
- Firefox extension will load faster

v0.0.2
- Add placeholders to factorise redondant informations (name, version...)
- Add wrapper extension for Google Chrome, Mozilla Firefox and Opera
- The wrappers are published on the stores

v0.0.1
- Working configuration panel
- Available as a userscript (Google Chrome / GreaseMonkey)
- Adds shortcuts to quickly browse the important places (e.g.: the bank, the doors)
- Enables numeric stat on the hero experience bar
- Highlights the AP border (from green to red) depending of the remaining AP
- Sets the maximum number of AP for the constructions (instead of 1 by default)
- Hides completed constructions
- Hides a lot of interface elements you may find superfluous
- Enables synchronisation with BigBroth'Hordes (French external tool, available in other languages)
- Enables synchronisation with Où en êtes-vous ? (French external tool)